--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <header>
-        <img src="./img/tiny-world.png" width="150" height="150"/>
+        <!-- img src="./img/tiny-world.png" width="150" height="150"/ -->
         <div class="column">
             <h1>A Tiny JS World</h1>
             <div>
@@ -46,10 +46,10 @@
     <footer>
         <div>
             <div class="logo">A tiny JS world</div>
-            <div class="credits">
+            <!-- div class="credits">
                 Credits: Site emblem &copy; 2017,
                 <a href="http://www.tactus.com/blog/create-amazing-360-degree-tiny-planet-photos-videos/" target="_blank">TACTUS</a>
-            </div>
+            </div -->
         </div>
         <p><small>
             Styled with
