Add project emblem

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <header>
-        <!-- img src="./img/tiny-world.png" width="150" height="150"/ -->
+        <img src="./img/tiny-world-LitvinovCastle.png" width="150" height="150" />
         <div class="column">
             <h1>A Tiny JS World</h1>
             <div>
