fix code after PR

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>A Tiny JS World</title>
@@ -13,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="./ico/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="./ico/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="./ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./ico/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./ico/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./ico/favicon-16x16.png">
@@ -28,6 +29,7 @@
     <link rel="stylesheet" href="https://oleksiyrudenko.github.io/default-beauty.css/default-beauty.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <img src="./img/tiny-world-LitvinovCastle.png" class="emblem" />
@@ -35,7 +37,7 @@
             <h1>A Tiny JS World</h1>
             <div>
                 This tiny world is created as a part of
-                <a href="https://github.com/OleksiyRudenko/a-tiny-JS-world" target="_blank">A Tiny JS World</a> project
+                <a href="https://github.com/sioniks/a-tiny-JS-world" target="_blank">A Tiny JS World</a> project
             </div>
         </div>
     </header>
@@ -52,17 +54,18 @@
             </div -->
         </div>
         <p><small>
-            Styled with
-            <a href="https://github.com/OleksiyRudenko/default-beauty.css" target="_blank">
-                <i class="fas fa-heart"></i> Default-Beauty.css <i class="fab fa-github-square"></i>
-            </a>
-            and
-            <a href="https://github.com/OleksiyRudenko/normalize.css" target="_blank">
-                normalize.css fork <i class="fab fa-github-square"></i>
-            </a>
-        </small></p>
+                Styled with
+                <a href="https://github.com/sioniks/default-beauty.css" target="_blank">
+                    <i class="fas fa-heart"></i> Default-Beauty.css <i class="fab fa-github-square"></i>
+                </a>
+                and
+                <a href="https://github.com/sioniks/normalize.css" target="_blank">
+                    normalize.css fork <i class="fab fa-github-square"></i>
+                </a>
+            </small></p>
     </footer>
     <script src="./js/lib.js"></script>
     <script src="./index.js"></script>
 </body>
+
 </html>
