Added oop.js with my home task from kottans

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
         </small></p>
     </footer>
     <script src="./js/lib.js"></script>
-    <script src="./index.js"></script>
+    <script src="./oop.js"></script>
 </body>
 </html>
