Create a JS Tiny World
Edit style.css, index.html, index.js.
Add information to worlds.md.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <main id="main">
-        <h2>This world is inhabited by</h2>
+        <h2>This world is inhabited by LuckyDnepr</h2>
         <p class="source-code">(world's <code><a id="source-code" href="./index.js" target="_blank">source code</a></code>)</p>
     </main>
     <footer>
