Switch to modules to support both browser and NodeJS envs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="https://oleksiyrudenko.github.io/normalize.css/normalize.css">
     <link rel="stylesheet" href="https://oleksiyrudenko.github.io/default-beauty.css/default-beauty.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script type="module" src="./index.js" defer></script>
 </head>
 <body>
     <header>
@@ -48,7 +49,7 @@
             <div class="logo">A tiny JS world</div>
             <!-- div class="credits">
                 Credits: Site emblem &copy; 2017,
-                <a href="http://www.tactus.com/blog/create-amazing-360-degree-tiny-planet-photos-videos/" target="_blank">TACTUS</a>
+                <a href="https://www.tactus.com/blog/create-amazing-360-degree-tiny-planet-photos-videos/" target="_blank">TACTUS</a>
             </div -->
         </div>
         <p><small>
@@ -62,7 +63,5 @@
             </a>
         </small></p>
     </footer>
-    <script src="./js/lib.js"></script>
-    <script src="./index.js"></script>
 </body>
 </html>
