Рефакторинг коду та розширення світу.

--- a/index.html
+++ b/index.html
@@ -1,67 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>A Tiny JS World</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="57x57" href="./ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="./ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./ico/favicon-16x16.png">
-    <link rel="manifest" href="./ico/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./ico/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass%20Mono">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.4/css/all.css">
-    <link rel="stylesheet" href="https://oleksiyrudenko.github.io/normalize.css/normalize.css">
-    <link rel="stylesheet" href="https://oleksiyrudenko.github.io/default-beauty.css/default-beauty.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./ico/apple-icon-57x57.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./ico/apple-icon-60x60.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./ico/apple-icon-72x72.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./ico/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./ico/apple-icon-114x114.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./ico/apple-icon-120x120.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./ico/apple-icon-144x144.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./ico/apple-icon-152x152.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./ico/apple-icon-180x180.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./ico/android-icon-192x192.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./ico/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./ico/favicon-96x96.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./ico/favicon-16x16.png" />
+    <link rel="manifest" href="./ico/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="./ico/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Overpass%20Mono" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="https://oleksiyrudenko.github.io/normalize.css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://oleksiyrudenko.github.io/default-beauty.css/default-beauty.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script type="module" src="./index.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="./img/tiny-world-LitvinovCastle.png" class="emblem" />
-        <div class="column">
-            <h1>A Tiny JS World</h1>
-            <div>
-                This tiny world is created as a part of
-                <a href="https://github.com/OleksiyRudenko/a-tiny-JS-world" target="_blank">A Tiny JS World</a> project
-            </div>
+      <img src="./img/tiny-world-LitvinovCastle.png" class="emblem" />
+      <div class="column">
+        <h1>A Tiny JS World</h1>
+        <div>
+          This tiny world is created as a part of
+          <a
+            href="https://github.com/OleksiyRudenko/a-tiny-JS-world"
+            target="_blank"
+            >A Tiny JS World</a
+          >
+          project
         </div>
+      </div>
     </header>
     <main id="main">
-        <h2>This world is inhabited by</h2>
-        <p class="source-code">(world's <code><a id="source-code" href="./index.js" target="_blank">source code</a></code>)</p>
+      <h2>This world is inhabited by</h2>
+      <p class="source-code">
+        (world's
+        <code
+          ><a id="source-code" href="./index.js" target="_blank"
+            >source code</a
+          ></code
+        >)
+      </p>
+      <div id="inhabitants" class="inhabitants"></div>
     </main>
     <footer>
-        <div>
-            <div class="logo">A tiny JS world</div>
-            <!-- div class="credits">
+      <div>
+        <div class="logo">A tiny JS world</div>
+        <!-- div class="credits">
                 Credits: Site emblem &copy; 2017,
                 <a href="https://www.tactus.com/blog/create-amazing-360-degree-tiny-planet-photos-videos/" target="_blank">TACTUS</a>
             </div -->
-        </div>
-        <p><small>
-            Styled with
-            <a href="https://github.com/OleksiyRudenko/default-beauty.css" target="_blank">
-                <i class="fas fa-heart"></i> Default-Beauty.css <i class="fab fa-github-square"></i>
-            </a>
-            and
-            <a href="https://github.com/OleksiyRudenko/normalize.css" target="_blank">
-                normalize.css fork <i class="fab fa-github-square"></i>
-            </a>
-        </small></p>
+      </div>
+      <p>
+        <small>
+          Styled with
+          <a
+            href="https://github.com/OleksiyRudenko/default-beauty.css"
+            target="_blank">
+            <i class="fas fa-heart"></i> Default-Beauty.css
+            <i class="fab fa-github-square"></i>
+          </a>
+          and
+          <a
+            href="https://github.com/OleksiyRudenko/normalize.css"
+            target="_blank">
+            normalize.css fork <i class="fab fa-github-square"></i>
+          </a>
+        </small>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
